# cargo-local-pkgs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lockfile.rs  main.rs  manifest.rs
