[package]
name = "cargo-local-pkgs"
version = "0.1.1"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/jonas-schievink/cargo-local-pkgs"
description = "Run cargo commands on all local packages"

[dependencies]
toml = "0.1"
log = "0.3"
env_logger = { version = "0.3", optional = true }
rustc-serialize = "0.3"

[features]
logging = ["env_logger"]
